--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -42,6 +42,7 @@
                         <Button fx:id="btnAdd" mnemonicParsing="false" onAction="#onClickAdd" text="Добавить" />
                         <Button fx:id="btnOpen" mnemonicParsing="false" onAction="#onClickOpen" text="Открыть" />
                         <Button fx:id="btnSelect" mnemonicParsing="false" onAction="#onClickSelect" text="Отобрать" />
+                        <Pane fx:id="barChartPane" prefHeight="200.0" prefWidth="200.0" />
                      </children>
                      <padding>
                         <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
